FIxed the spacing

--- a/style/navbar.css
+++ b/style/navbar.css
@@ -92,7 +92,7 @@
         grid-row-end: 2;
         display:flex;
         justify-content: right;
-        padding-right: 10px;
+        padding-right: 15%;
     }
 
     .searchbar {
